Add share link within page

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -10,8 +10,13 @@
     <main>
       <ul>
         <li>
-          <button id="twitter">
-            Twitter
+          <button id="pageTwitter" data-i18n="pageTwitter">
+            Share page with Twitter
+          </button>
+        </li>
+        <li>
+          <button id="linkTwitter" data-i18n="linkTwitter">
+            Share link with Twitter
           </button>
         </li>
       </ul>
