Add storage handler to popup

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -19,7 +19,7 @@
           <div>
             <p>
               <span>
-                <input type="checkbox" id="Twitter" checked="checked" />
+                <input type="checkbox" id="Twitter" />
                 <label for="Twitter" class="checkboxLabel"
                        aria-details="enableTwitterDetail">
                   Twitter
@@ -37,7 +37,7 @@
           <div>
             <p>
               <span>
-                <input type="checkbox" id="Facebook" checked="checked" />
+                <input type="checkbox" id="Facebook" />
                 <label for="Facebook" class="checkboxLabel"
                        aria-details="enableFacebookDetail">
                   Facebook
@@ -55,7 +55,7 @@
           <div>
             <p>
               <span>
-                <input type="checkbox" id="LINE" checked="checked" />
+                <input type="checkbox" id="LINE" />
                 <label for="LINE" class="checkboxLabel"
                        aria-details="enableLineDetail">
                   LINE
