--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -56,6 +56,22 @@
           </li>
         </ul>
       </section>
+      <section id="Hatena" class="snsItem">
+        <h1>Hatena</h1>
+        <ul>
+          <li>
+            <button id="sharePageHatena" data-i18n="sharePage,Hatena">
+              Share page with Hatena
+            </button>
+          </li>
+          <li>
+            <button id="shareLinkHatena" class="link"
+                    data-i18n="shareLink,Hatena">
+              Share link with Hatena
+            </button>
+          </li>
+        </ul>
+      </section>
       <div id="warnSnsNotSelected">
         <p data-i18n="snsNotSelected">
           SNS is not selected.
