--- a/src/html/options.html
+++ b/src/html/options.html
@@ -70,6 +70,24 @@
               </div>
             </details>
           </div>
+          <div>
+            <p>
+              <span>
+                <input type="checkbox" id="Hatena" />
+                <label for="Hatena" class="checkboxLabel"
+                       aria-details="enableHatenaDetail">
+                  Hatena
+                </label>
+              </span>
+            </p>
+            <details id="enableHatenaDetail">
+              <div>
+                <p data-i18n="optionsEnableSnsDetail,Hatena">
+                  Enable sharing with Hatena.
+                </p>
+              </div>
+            </details>
+          </div>
         </fieldset>
       </form>
     </main>
