--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -72,6 +72,22 @@
           </li>
         </ul>
       </section>
+      <section id="Google+" class="snsItem">
+        <h1>Google+</h1>
+        <ul>
+          <li>
+            <button id="sharePageGoogle+" data-i18n="sharePage,Google+">
+              Share page with Google+
+            </button>
+          </li>
+          <li>
+            <button id="shareLinkGoogle+" class="link"
+                    data-i18n="shareLink,Google+">
+              Share link with Google+
+            </button>
+          </li>
+        </ul>
+      </section>
       <div id="warnSnsNotSelected">
         <p data-i18n="snsNotSelected">
           SNS is not selected.
