--- a/src/html/options.html
+++ b/src/html/options.html
@@ -88,6 +88,24 @@
               </div>
             </details>
           </div>
+          <div>
+            <p>
+              <span>
+                <input type="checkbox" id="Google+" />
+                <label for="Google+" class="checkboxLabel"
+                       aria-details="enableGoogle+Detail">
+                  Google+
+                </label>
+              </span>
+            </p>
+            <details id="enableGoogle+Detail">
+              <div>
+                <p data-i18n="optionsEnableSnsDetail,Google+">
+                  Enable sharing with Google+.
+                </p>
+              </div>
+            </details>
+          </div>
         </fieldset>
       </form>
     </main>
