Add mastodon to options page

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -106,6 +106,27 @@
               </div>
             </details>
           </div>
+          <div>
+            <p>
+              <span>
+                <input type="checkbox" id="Mastodon" />
+                <label for="Mastodon" class="checkboxLabel"
+                       aria-details="enableMastodonDetail">
+                  Mastodon
+                </label>
+              </span>
+            </p>
+            <details id="enableMastodonDetail">
+              <div>
+                <p data-i18n="optionsEnableSnsDetail,Mastodon">
+                  Enable sharing with Mastodon.
+                </p>
+                <p data-i18n="optionsMastodonInstanceNote">
+                  You need to register your Mastodon instance as a program to handle "web+mastodon://" protocol from "about:preferences".
+                </p>
+              </div>
+            </details>
+          </div>
         </fieldset>
       </form>
     </main>
