Add Mastodon to popup

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -88,6 +88,22 @@
           </li>
         </ul>
       </section>
+      <section id="Mastodon" class="snsItem">
+        <h1>Mastodon</h1>
+        <ul>
+          <li>
+            <button id="sharePageMastodon" data-i18n="sharePage,Mastodon">
+              Share page with Mastodon
+            </button>
+          </li>
+          <li>
+            <button id="shareLinkMastodon" class="link"
+                    data-i18n="shareLink,Mastodon">
+              Share link with Mastodon
+            </button>
+          </li>
+        </ul>
+      </section>
       <div id="warnSnsNotSelected">
         <p data-i18n="snsNotSelected">
           SNS is not selected.
