--- a/src/html/options.html
+++ b/src/html/options.html
@@ -131,8 +131,8 @@
                   Enable sharing with Mastodon.
                 </p>
                 <p data-i18n="optionsMastodonInstanceUrlNote">
-                  If the browser has been registered  to handle the "web+mastodon:" protocol, leave the Instance URL input field empty.
-                  To check whether it is registered or not, refer to "Applications" from "about:preferences".
+                  If the browser is registered to handle the "web+mastodon:" protocol, leave the Instance URL input field empty.
+                  To check whether it is registered, refer to "Applications" section from "about:preferences".
                 </p>
               </div>
             </details>
