--- a/src/html/options.html
+++ b/src/html/options.html
@@ -121,6 +121,7 @@
                   Instance URL
                 </label>
                 <input type="url" id="mastodonInstanceUrl"
+                       data-sub-item-of="Mastodon"
                        placeholder="https://"
                        pattern="https?://(?:\[(?:(?:(?:(?:(?:[\da-f]{1,4}:){0,4}[\da-f]{1,4})?::|(?:(?:[\da-f]{1,4}:){0,3}[\da-f]{1,4})?::[\da-f]{1,4}:|(?:(?:[\da-f]{1,4}:){0,2}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){2}|(?:(?:[\da-f]{1,4}:){0,1}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){3}|[\da-f]{1,4}?::(?:[\da-f]{1,4}:){4}|::(?:[\da-f]{1,4}:){5}|(?:[\da-f]{1,4}:){6})(?:(?:(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))\.){3}(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))|[\da-f]{1,4}:[\da-f]{1,4})|(?:(?:[\da-f]{1,4}:){0,5}[\da-f]{1,4})?::[\da-f]{1,4}|(?:(?:[\da-f]{1,4}:){0,6}[\da-f]{1,4})?::)%25(?:[\w\-\.~]|%[\dA-F]{2})+|(?:(?:(?:[\da-f]{1,4}:){0,4}[\da-f]{1,4})?::|(?:(?:[\da-f]{1,4}:){0,3}[\da-f]{1,4})?::[\da-f]{1,4}:|(?:(?:[\da-f]{1,4}:){0,2}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){2}|(?:(?:[\da-f]{1,4}:){0,1}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){3}|[\da-f]{1,4}?::(?:[\da-f]{1,4}:){4}|::(?:[\da-f]{1,4}:){5}|(?:[\da-f]{1,4}:){6})(?:(?:(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))\.){3}(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))|[\da-f]{1,4}:[\da-f]{1,4})|(?:(?:[\da-f]{1,4}:){0,5}[\da-f]{1,4})?::[\da-f]{1,4}|(?:(?:[\da-f]{1,4}:){0,6}[\da-f]{1,4})?::|v[\da-f]+\.[\w\-\.~!\$&'\(\)\*\+,;=:]+)\]|(?:(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))\.){3}(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))|(?:[\w\-\.~!\$&'\(\)\*\+,;=]|%[\dA-F]{2})*)/?" />
               </span>
