--- a/src/html/options.html
+++ b/src/html/options.html
@@ -115,7 +115,7 @@
                   Mastodon
                 </label>
               </span>
-              <span class="sub-item">
+              <span class="subItem">
                 <label for="mastodonInstanceUrl" class="label"
                        aria-details="enableMastodonDetail">
                   Instance URL
