--- a/src/html/background.html
+++ b/src/html/background.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Share with SNS - background</title>
-    <script src="../js/background.js"></script>
+    <script src="../js/background.js" defer></script>
   </head>
   <body>
   </body>
