--- a/src/html/options.html
+++ b/src/html/options.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title data-i18n="optionsTitle">Share with SNS - Options</title>
     <link rel="stylesheet" href="../css/options.css" />
-    <script src="../js/options.js"></script>
+    <script src="../js/options.js" defer></script>
   </head>
   <body>
     <header>
