--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Share with SNS - popup menu</title>
     <link rel="stylesheet" href="../css/popup.css" />
-    <script src="../js/popup.js"></script>
+    <script src="../js/popup.js" defer></script>
   </head>
   <body>
     <main id="snsItems">
