Add open options page button in popup

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -27,5 +27,12 @@
         </p>
       </div>
     </main>
+    <footer>
+      <p>
+        <button id="openOptions" data-i18n="optionsLabel">
+          Options
+        </button>
+      </p>
+    </footer>
   </body>
 </html>
