--- a/src/html/options.html
+++ b/src/html/options.html
@@ -91,7 +91,8 @@
           <div>
             <p>
               <span>
-                <input type="checkbox" id="Mastodon" />
+                <input type="checkbox" id="Mastodon"
+                       data-sub-item="mastodonInstanceUrl" />
                 <label for="Mastodon" class="checkboxLabel"
                        aria-details="enableMastodonDetail">
                   Mastodon
