--- a/src/html/options.html
+++ b/src/html/options.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title data-i18n="optionsTitle">Share with SNS - Options</title>
+    <title data-i18n="optionsTitle">Share on SNS - Options</title>
     <link rel="icon" href="../img/icon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="../css/options.css" />
     <script src="../mjs/options.js" type="module"></script>
   </head>
   <body>
     <header>
-      <h1 data-i18n="optionsTitle">Share with SNS - Options</h1>
+      <h1 data-i18n="optionsTitle">Share on SNS - Options</h1>
     </header>
     <main>
       <form id="optionsForm">
@@ -30,7 +30,7 @@
             <details id="enableTwitterDetail">
               <div>
                 <p data-i18n="optionsEnableSnsDetail,Twitter">
-                  Enable sharing with Twitter.
+                  Enable sharing on Twitter.
                 </p>
               </div>
             </details>
@@ -48,7 +48,7 @@
             <details id="enableFacebookDetail">
               <div>
                 <p data-i18n="optionsEnableSnsDetail,Facebook">
-                  Enable sharing with Facebook.
+                  Enable sharing on Facebook.
                 </p>
               </div>
             </details>
@@ -66,7 +66,7 @@
             <details id="enableLineDetail">
               <div>
                 <p data-i18n="optionsEnableSnsDetail,LINE">
-                  Enable sharing with LINE.
+                  Enable sharing on LINE.
                 </p>
               </div>
             </details>
@@ -84,7 +84,7 @@
             <details id="enableHatenaDetail">
               <div>
                 <p data-i18n="optionsEnableSnsDetail,Hatena">
-                  Enable sharing with Hatena.
+                  Enable sharing on Hatena.
                 </p>
               </div>
             </details>
@@ -113,7 +113,7 @@
             <details id="enableMastodonDetail">
               <div>
                 <p data-i18n="optionsEnableSnsDetail,Mastodon">
-                  Enable sharing with Mastodon.
+                  Enable sharing on Mastodon.
                 </p>
               </div>
             </details>
@@ -142,7 +142,7 @@
             <details id="enablePleromaDetail">
               <div>
                 <p data-i18n="optionsEnableSnsDetail,Pleroma">
-                  Enable sharing with Pleroma.
+                  Enable sharing on Pleroma.
                 </p>
               </div>
             </details>
