--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Share with SNS - popup menu</title>
+    <title>Share on SNS - popup menu</title>
     <link rel="stylesheet" href="../css/popup.css" />
     <script src="../mjs/popup.js" type="module"></script>
   </head>
