--- a/src/html/background.html
+++ b/src/html/background.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Share on SNS - background</title>
+    <title>Share with SNS - background</title>
     <script src="../mjs/background.js" type="module"></script>
   </head>
   <body>
