--- a/src/html/options.html
+++ b/src/html/options.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title data-i18n="optionsTitle">Share on SNS - Options</title>
+    <title data-i18n="optionsTitle">Share with SNS - Options</title>
     <link rel="icon" href="../img/icon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="../css/options.css" />
     <script src="../mjs/options.js" type="module"></script>
   </head>
   <body>
     <header>
-      <h1 data-i18n="optionsTitle">Share on SNS - Options</h1>
+      <h1 data-i18n="optionsTitle">Share with SNS - Options</h1>
     </header>
     <main>
       <form id="optionsForm">
