--- a/src/html/options.html
+++ b/src/html/options.html
@@ -148,6 +148,29 @@
             </details>
           </div>
         </fieldset>
+        <fieldset>
+          <legend data-i18n="optionalSettings">
+            Optional Settings
+          </legend>
+          <div>
+            <p aria-details="preferCanonicalUrlDetail">
+              <span>
+                <input type="checkbox" id="preferCanonicalUrl" />
+                <label for="preferCanonicalUrl" class="checkboxLabel"
+                       data-i18n="optionsPreferCanonicalUrl">
+                  Prefer canonical URL if present
+                </label>
+              </span>
+            </p>
+            <details id="preferCanonicalUrlDetail">
+              <div>
+                <p data-i18n="optionsPreferCanonicalUrlDetail">
+                  Use the canonical URL if it exists on the web page.
+                </p>
+              </div>
+            </details>
+          </div>
+        </fieldset>
       </form>
     </main>
   </body>
