--- a/src/html/options.html
+++ b/src/html/options.html
@@ -99,7 +99,7 @@
                   Mastodon
                 </label>
               </span>
-              <span class="subItem">
+              <span class="sub-item">
                 <label for="mastodonInstanceUrl" class="label"
                        aria-details="enableMastodonDetail">
                   Instance URL
@@ -128,7 +128,7 @@
                   Pleroma
                 </label>
               </span>
-              <span class="subItem">
+              <span class="sub-item">
                 <label for="pleromaInstanceUrl" class="label"
                        aria-details="enablePleromaDetail">
                   Instance URL
