--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -9,7 +9,7 @@
   <body>
     <main id="snsItems">
       <template id="snsItemTemplate">
-        <section class="snsItem">
+        <section class="sns-item">
           <h1></h1>
           <ul>
             <li>
