Add html validator

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -13,10 +13,10 @@
           <h1></h1>
           <ul>
             <li>
-              <button class="sharePage"></button>
+              <button class="sharePage" type="button"></button>
             </li>
             <li>
-              <button class="shareLink"></button>
+              <button class="shareLink" type="button"></button>
             </li>
           </ul>
         </section>
@@ -29,7 +29,7 @@
     </main>
     <footer>
       <p>
-        <button id="openOptions" data-i18n="optionsLabel">
+        <button id="openOptions" data-i18n="optionsLabel" type="button">
           Options
         </button>
       </p>
