Add browser-style class

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -19,7 +19,7 @@
           </legend>
           <div>
             <p>
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="Twitter" />
                 <label for="Twitter" class="checkboxLabel"
                        aria-details="enableTwitterDetail">
@@ -37,7 +37,7 @@
           </div>
           <div>
             <p>
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="Facebook" />
                 <label for="Facebook" class="checkboxLabel"
                        aria-details="enableFacebookDetail">
@@ -55,7 +55,7 @@
           </div>
           <div>
             <p>
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="LINE" />
                 <label for="LINE" class="checkboxLabel"
                        aria-details="enableLineDetail">
@@ -73,7 +73,7 @@
           </div>
           <div>
             <p>
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="Hatena" />
                 <label for="Hatena" class="checkboxLabel"
                        aria-details="enableHatenaDetail">
@@ -91,7 +91,7 @@
           </div>
           <div>
             <p>
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="Mastodon"
                        data-sub-item="mastodonInstanceUrl" />
                 <label for="Mastodon" class="checkboxLabel"
@@ -105,7 +105,7 @@
                   Instance URL
                 </label>
                 <input type="url" id="mastodonInstanceUrl"
-                       data-sub-item-of="Mastodon"
+                       class="browser-style" data-sub-item-of="Mastodon"
                        placeholder="https://"
                        pattern="https?://(?:\[(?:(?:(?:(?:(?:[\da-f]{1,4}:){0,4}[\da-f]{1,4})?::|(?:(?:[\da-f]{1,4}:){0,3}[\da-f]{1,4})?::[\da-f]{1,4}:|(?:(?:[\da-f]{1,4}:){0,2}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){2}|(?:(?:[\da-f]{1,4}:){0,1}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){3}|[\da-f]{1,4}?::(?:[\da-f]{1,4}:){4}|::(?:[\da-f]{1,4}:){5}|(?:[\da-f]{1,4}:){6})(?:(?:(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))\.){3}(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))|[\da-f]{1,4}:[\da-f]{1,4})|(?:(?:[\da-f]{1,4}:){0,5}[\da-f]{1,4})?::[\da-f]{1,4}|(?:(?:[\da-f]{1,4}:){0,6}[\da-f]{1,4})?::)%25(?:[\w\-\.~]|%[\dA-F]{2})+|(?:(?:(?:[\da-f]{1,4}:){0,4}[\da-f]{1,4})?::|(?:(?:[\da-f]{1,4}:){0,3}[\da-f]{1,4})?::[\da-f]{1,4}:|(?:(?:[\da-f]{1,4}:){0,2}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){2}|(?:(?:[\da-f]{1,4}:){0,1}[\da-f]{1,4})?::(?:[\da-f]{1,4}:){3}|[\da-f]{1,4}?::(?:[\da-f]{1,4}:){4}|::(?:[\da-f]{1,4}:){5}|(?:[\da-f]{1,4}:){6})(?:(?:(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))\.){3}(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))|[\da-f]{1,4}:[\da-f]{1,4})|(?:(?:[\da-f]{1,4}:){0,5}[\da-f]{1,4})?::[\da-f]{1,4}|(?:(?:[\da-f]{1,4}:){0,6}[\da-f]{1,4})?::|v[\da-f]+\.[\w\-\.~!\$&'\(\)\*\+,;=:]+)\]|(?:(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))\.){3}(?:(?:1\d|[1-9])?\d|2(?:[0-4]\d|5[0-5]))|(?:[\w\-\.~!\$&'\(\)\*\+,;=]|%[\dA-F]{2})*)/?" />
               </span>
@@ -120,7 +120,7 @@
           </div>
           <div>
             <p>
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="Pleroma"
                        data-sub-item="pleromaInstanceUrl" />
                 <label for="Pleroma" class="checkboxLabel"
@@ -128,7 +128,7 @@
                   Pleroma
                 </label>
               </span>
-              <span class="sub-item">
+              <span class="sub-item browser-style">
                 <label for="pleromaInstanceUrl" class="label"
                        aria-details="enablePleromaDetail">
                   Instance URL
@@ -154,7 +154,7 @@
           </legend>
           <div>
             <p aria-details="preferCanonicalUrlDetail">
-              <span>
+              <span class="browser-style">
                 <input type="checkbox" id="preferCanonicalUrl" />
                 <label for="preferCanonicalUrl" class="checkboxLabel"
                        data-i18n="optionsPreferCanonicalUrl">
